feat: add section "spartok"

--- a/index.html
+++ b/index.html
@@ -781,9 +781,6 @@
                     <p>
                         КУРГАН КУЛЬ-ОБА<br>Золотые украшения: диск с подвесками, наконечник шейной гривны, пластина в виде фигуры оленя, сосуд с изображениями скифов<br>Государственный Эрмитаж
                     </p>
-                    <p>
-                        Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
-                    </p>
                 </div>
                 <picture class="kul-oba-2">
                     <source srcset="./Images/Kul-Oba_grivna__1036x464.avif" 
@@ -815,20 +812,27 @@
             </div>
             <div class="spartok__text-4">
                 <h3 class="title--h3">
-                    Гробницы боспорской аристократии
+                    Гробницы боспорской аристократии периода Спартокидов
                 </h3>
                 <p>
-                    Правление первых Спартокидов отличалось значительным ростом государства и экономическим процветанием. Одним из проявлений этого «золотого века» Боспора являются величественные гробницы боспорской аристократии.
+                    Правление династии Спартокидов отличалось значительным ростом государства и экономическим процветанием. Одним из проявлений этого «золотого века» Боспора являются величественные гробницы боспорской аристократии.
                 </p>
                 <p>
-                    Датировка элитных погребений Боспора имеет много допущений и неточностей. Она основана на определении датирующих вещей и керамики из погребального инвентаря гробниц. Условно можно выделить несколько групп боспорских погребений IV-III вв. до н.э.
+                    Датировка элитных погребений Боспора имеет много допущений и неточностей. Она основана на определении датирующих вещей и керамики из погребального инвентаря гробниц. Условно можно выделить несколько групп боспорских погребений IV-II вв. до н.э.
                 </p>
-                <P>
-                    Погребения 400-375 гг. до н.э. 
-                </P>
-                <p>
-                    Баксинский курган - предполагаемая гробница Сатира I. Дата совершения погребения - около 400-390 гг. до н.э.
-                </p>
+                <h4 class="title--h4">Погребения 400-350 гг. до н.э.</h4>
+                <ul class="tomb-list">
+                    <li class="tomb-list-item">
+                        <p>
+                            Баксинский курган (Пантикапей). Предполагаемая гробница Сатира I. Дата совершения погребения - около 400-390 гг. до н.э.
+                        </p>
+                    </li>
+                    <li class="tomb-list-item">
+                        <p>
+                            Курган № 1 группы «Семь Братьев» (Лабрис). Предполагаемая гробница царя Гекатея. Дата совершения погребения - около 385-375 гг. до н.э.
+                        </p>
+                    </li>
+                </ul>              
             </div>
             <div class="spartok__large-picture-container-2 large-picture--container">
                 <picture class="bliz-1">
@@ -842,10 +846,7 @@
                 </picture>
                 <div class="picture--description bliz-description">
                     <p>
-                        КУРГАН БОЛЬШАЯ БЛИЗНИЦА<br>Рисунок раскопок 1864 г. Роспись склепа №2 - «склеп Деметры», золотые украшения: пектораль и височные подвески<br>Государственный Эрмитаж
-                    </p>
-                    <p>
-                        Скарабеоид из сердолика с резьбой, на подвижной золотой дужке с изображением оленя, 400-300 гг. до н.э.<br>Подобные печати-штампы были широко распространены в античном мире 
+                        КУРГАН БОЛЬШАЯ БЛИЗНИЦА<br>Раскопки 1864 г. (рисунок), роспись склепа №2 (склеп Деметры), золотые украшения: пектораль и височные подвески<br>Государственный Эрмитаж
                     </p>
                 </div>
                 <picture class="bliz-2">
@@ -876,6 +877,279 @@
                     width="694" height="608">
                 </picture>
             </div>
+            <div class="spartok__text-5">
+                <h3 class="title--h3">
+                    Война наследников Перисада I
+                </h3>
+                <p>
+                    После смерти Перисада I власть перешла к его старшему сыну. Его брат поддержал передачу власти. Однако их младший брат Евмел заявил собственные права на боспорский престол. 
+                </p>
+                <h3 class="title--h3">
+                    Евмел: яркое, но короткое правление
+                </h3>
+                <p>
+                    Сразу же после обретения власти Евмел начал жестокие репрессии против членов семей своих братьев и близких родственников, которые не поддержали его во время войны за боспорский престол.
+                </p>
+            </div>
+            <div class="spartok__picture-container-left-2 picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Panti_attic-redfigure-pelike__456x736.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Panti_attic-redfigure-pelike__456x736.webp" 
+                        alt="Аттическая краснофигурная пелика со сценой сражения амазонки с грифоном 400-300 гг. до н.э." 
+                        loading="lazy" 
+                        width="456" height="736">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                          КРАСНОФИГУРНАЯ ПЕЛИКА СО СЦЕНОЙ СРАЖЕНИЯ АМАЗОНКИ С ГРИФОНОМ<br>400-300 гг. до н.э.<br>Государственный Эрмитаж
+                        </p>
+                        <p>
+                            Древние греки считали амазонками воинственных женщин, которые были потомками. Античные авторы помещали место обитания амазонок в различных местах Северного Причерноморья, Кавказа и Малой Азии.  
+                        </p>
+                    </div>
+                </div>
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Panti_shield-bearer__365x772.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Panti_shield-bearer__365x772.webp" 
+                        alt="Изображение воина со щитом Пантикапей 310-250 гг. до н.э." 
+                        loading="lazy" 
+                        width="365" height="772">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                          ИЗОБРАЖЕНИЕ ВОИНА СО ЩИТОМ<br>Боспорский феномен. Ч.1. СПб. 2004. с. 228
+                        </p>
+                        <p>
+                            А.К. Нефёдкин в своей статье в сборнике Боспорский феномен изложил свою интерпретацию изображения воина на стеле из Керчи (Пантикапей).  
+                        </p>
+                    </div>
+                </div>    
+            </div>
+            <div class="spartok__map-container-3 map--container">
+                <picture>
+                    <source srcset="./Maps/Bospor_325-300_bc__2067x1882.avif" 
+                    type="image/avif">
+                    <img class="map--img" 
+                    src="./Maps/Bospor_325-300_bc__2067x1882.webp" 
+                    alt="Карта греческих городов и поселений Боспора 325-300 гг. до н.э." 
+                    loading="lazy" 
+                    width="2067" height="1882">
+                </picture>
+            </div>
+            <div class="spartok__text-6">
+                <h3 class="title--h3">
+                    Спарток III: первый царь Боспора
+                </h3>
+                <p>
+                    После трагической смерти Евмела боспорский престол занимает его сын Спарток III. 
+                </p>
+                <p>
+                    Правители Боспора традиционно носили титул архонта по отношению к греческому населению, и царский титул для подконтрольных Боспору варварских племён. Спарток III стал первым правителем, который принял царский титул βασιλευς для всех подданных Боспора.  
+                </p>
+            </div>
+            <div class="spartok__picture-container-3 picture--container">
+                <div class="picture--container-inner">
+                    <div class="double-picture--container">
+                        <picture>
+                            <source srcset="./Images/Panti_gemistater_Spartok-3__372x184.avif" type="image/avif">
+                            <img class="picture--img" 
+                            src="./Images/Panti_gemistater_Spartok-3__372x184.webp" 
+                            alt="Монета гемистатер Пантикапей Спарток III" 
+                            loading="lazy" 
+                            width="372" height="184">
+                        </picture>
+                        <picture>
+                            <source srcset="./Images/Panti_tetrakchalk_Spartok-3__372x178.avif" 
+                            type="image/avif">
+                            <img class="picture--img" 
+                            src="./Images/Panti_tetrakchalk_Spartok-3__372x178.webp" 
+                            alt="Монета тетрахалк Пантикапей Спарток III" 
+                            loading="lazy" 
+                            width="372" height="178">
+                        </picture>
+                    </div>
+                    <div class="picture--description">
+                        <p>
+                            БОСПОРСКИЕ МОНЕТЫ<br>https://bosporan-kingdom.com/
+                        </p>
+                        <p>
+                            Состояние финансовой системы Боспора во время правления Спартока III было устойчивым и стабильным. Об этом говорят регулярные выпуски серий монет крупных номиналов из золота и серебра, а также мелких номиналов из меди. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="spartok__large-picture-container-3">
+                <div class="spartok__large-picture-container-2 large-picture--container">
+                    <picture class="vasy-1">
+                        <source srcset="./Images/Vasy_sarcophagus__1240x292.avif" 
+                        type="image/avif">
+                        <img class="wide-picture--img" 
+                        src="./Images/Vasy_sarcophagus__1240x292.webp" 
+                        alt="Элемент деревянного саркофага курган Васюринская Гора" 
+                        loading="lazy" 
+                        width="1240" height="292">
+                    </picture>
+                    <div class="picture--description vasy-description">
+                        <p>
+                            КУРГАН ВАСЮРИНСКАЯ ГОРА<br>Элемент деревянного саркофага, раскопки кургана 1868-1872 гг. (Рисунок), роспись стены гробницы, бронзовое украшение колесницы<br>Государственный Эрмитаж
+                        </p>
+                    </div>
+                    <picture class="vasy-2">
+                        <source srcset="./Images/Vasy__852x704.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Vasy__852x704.webp" 
+                        alt="Раскопки 1868-1872 гг. курган Васюринская Гора" 
+                        loading="lazy" 
+                        width="852" height="784">
+                    </picture>
+                    <picture class="vasy-3">
+                        <source srcset="./Images/Vasy_crypt__732x674.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Vasy_crypt__732x674.webp" 
+                        alt="Роспись стены гробницы курган Васюринская Гора" 
+                        loading="lazy" 
+                        width="732" height="674">
+                    </picture>
+                    <picture class="vasy-4">
+                        <source srcset="./Images/Vasy_acrotery__726x654.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Vasy_acrotery__726x654.webp" 
+                        alt="Бронзовое украшение колесницы курган Васюринская Гора" 
+                        loading="lazy" 
+                        width="726" height="654">
+                    </picture>
+                </div>
+            </div>
+            <div class="spartok__text-7">
+                <h3 class="title--h3">
+                    Перисад II: сближение с Птолемеями
+                </h3>
+                <p>
+                    Перисад II занял боспорский трон после смерти своего отца Спартока III. Правление царя Перисада II 
+                </p>
+            </div>
+            <div class="spartok__picture-container-left-3 picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Ptolemy-ring__516x576.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Ptolemy-ring__516x576.webp" 
+                        alt="Бронзовый перстень птолемеевского типа" 
+                        loading="lazy" 
+                        width="516" height="576">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                          БРОНЗОВЫЙ ПЕРСТЕНЬ С ПОРТРЕТОМ ПТОЛЕМЕЯ II<br>300-200 гг. до н.э.<br>Государственный Эрмитаж
+                        </p>
+                        <p>
+                           Перстни так называемого «птолемеевского типа» с изображением царя Египта Птолемея II Филадельфа были широко распространены в эллинистическом мире, в том числе в Северном Причерноморье и на Боспоре.  
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="spartok__wide-picture-container">
+                <div class="picture--container-inner wide-picture--container">
+                    <picture>
+                        <source srcset="./Images/Nymphaion_Izida-vessel__988x520.avif" 
+                        type="image/avif">
+                        <img class="wide-picture--img" 
+                        src="./Images/Nymphaion_Izida-vessel__988x520.webp" 
+                        alt="Изображение корабля" 
+                        loading="lazy" 
+                        width="988" height="520">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                            ИЗОБРАЖЕНИЕ КОРАБЛЯ «ИЗИДА»<br>Государственный Эрмитаж
+                        </p>
+                        <p>
+                            В Нимфее был найден фрагмент настенной росписи с изображением корабля. Предполагается, что этим кораблем было судно «Изида», на котором в Боспор прибыло египетское посольство. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="spartok__map-container-4 map--container">
+                <picture>
+                    <source srcset="./Maps/Bospor_225-200_bc__2067x1882.avif" 
+                    type="image/avif">
+                    <img class="map--img" 
+                    src="./Maps/Bospor_225-200_bc__2067x1882.webp" 
+                    alt="Карта греческих городов и поселений Боспора 225-200 гг. до н.э." 
+                    loading="lazy" 
+                    width="2067" height="1882">
+                </picture>
+            </div>
+            <div class="spartok__text-8">
+                <h3 class="title--h3">
+                    Последние Спартокиды
+                </h3>
+                <p>
+                    Хронология правления последних царей боспорской династии Спартокидов является дискуссионной. 
+                </p>
+                <p>
+                    Перисад V считается последним правителем боспорской династии Спартокидов.
+                </p>
+            </div>
+            <div class="spartok__picture-container-4 picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Panti_obol_Levkon-2__372x191.avif" type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Panti_obol_Levkon-2__372x191.webp" 
+                        alt="Монета обол Пантикапей Левкон II" 
+                        loading="lazy" 
+                        width="372" height="191">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                            МОНЕТЫ ЛЕВКОНА II<br>https://bosporan-kingdom.com/
+                        </p>
+                        <p>
+                            Во время правления Левкона II на боспорских монетах появляется новая символика: голова Посейдона в профиль и нос боевого корабля. Предполагается, что это символы связаны с победой Антигона Досона.  
+                        </p>
+                    </div>
+                </div>
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Panti_stater_Gigi__372x183.avif" type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Panti_stater_Gigi__372x183.webp" 
+                        alt="Монета статер Пантикапей Гигиэнонт" 
+                        loading="lazy" 
+                        width="372" height="183">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                            МОНЕТЫ ГИГИЭНОНТА<br>https://bosporan-kingdom.com/
+                        </p>
+                        <p>
+                            Известна серия монет, в том числе золотых статеров с именем правителя Гигиэнонта. Время его правления достоверно не установлено. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="spartok__map-container-5 map--container">
+                <picture>
+                    <source srcset="./Maps/Bospor_125-100_bc__2067x1882.avif" 
+                    type="image/avif">
+                    <img class="map--img" 
+                    src="./Maps/Bospor_125-100_bc__2067x1882.webp" 
+                    alt="Карта греческих городов и поселений Боспора 125-100 гг. до н.э." 
+                    loading="lazy" 
+                    width="2067" height="1882">
+                </picture>
+            </div> 
         </section>
     </main>
 </body>
