feat: add section 'mitridat'

--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
                 </picture>
             </div> 
         </section>
-        <section class="mitridat section-container">
+        <section class="mitridat section--container">
             <h2 class="mitridat__title title--h2">
                 Династия Митридата Евпатора
             </h2>
@@ -1447,16 +1447,17 @@
                     width="2068" height="1882">
                 </picture>
             </div>
-            <div class="mitridat__text-4">
+        </section>
+        <div class="tibery__text-4">
                 <h3 class="title--h3">
-                    Гробницы боспорской аристократии I в. до н.э. - I в. н.э.
+                    Гробницы боспорской аристократии римского времени
                 </h3>
                 <div class="text--narrow">
                     <p>
                     Бурные политические и военные события эпохи Митридата, Фарнака, а также рубежа новой эры оставили свой след в виде богатых элитных погребений боспорской аристократии.
                 </p>
                 <p>
-                    Датировка элитных погребений Боспора имеет много допущений и неточностей. Она основана на определении датирующих вещей и керамики из погребального инвентаря гробниц. Условно можно выделить несколько групп боспорских погребений I в. до н.э. - I в. н.э. По ссылке в названии погребения доступна более подробная информация о нём, размещённая на ресурсе «История и Карта».
+                    Датировка элитных погребений Боспора имеет много допущений и неточностей. Она основана на определении датирующих вещей и керамики из погребального инвентаря гробниц. Условно можно выделить несколько групп боспорских погребений римского времени. По ссылке в названии погребения доступна более подробная информация о нём, размещённая на ресурсе «История и Карта».
                 </p>
                 </div>
                 <h4 class="title--h4">Погребения 400-350 гг. до н.э.</h4>
@@ -1476,8 +1477,7 @@
                         </p>
                     </li>
                 </ul>              
-            </div>
-        </section>
+        </div>
     </main>
 </body>
 </html>
