feat: add section 'late'

--- a/index.html
+++ b/index.html
@@ -1845,6 +1845,109 @@
                 </div>
             </div>
         </section>
+        <section class="late section--container">
+            <h2 class="late__title title--h2">
+                Поздний Боспор
+            </h2>
+            <div class="late__text">
+                <h3 class="title--h3">
+                    Гунны
+                </h3>
+                <p>
+                    Появление гуннов, последствия, гунны и готы
+                </p>
+            </div>
+            <div class="late__picture-container picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/diadema_hunnu__1605x344.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/diadema_hunnu__1605x344.webp" 
+                        alt="Золотая диадема периода гуннов" 
+                        loading="lazy" 
+                        width="1605" height="344">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                          ЗОЛОТАЯ ДИАДЕМА<br>Волгоградская область, хутор Верхне-Яблочный, близ станицы Верхне-Куртоярской<br>Государственный Эрмитаж
+                        </p>
+                        <p>
+                            Диадема золото, бронза, гранаты. ковка, филигрань, инкрустация. Длина 24 см.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="late__map-container map--container">
+                <picture>
+                    <source srcset="./Maps/Bospor_375-400__2067x1882.avif" 
+                    type="image/avif">
+                    <img class="map--img" 
+                    src="./Maps/Bospor_375-400__2067x1882.webp" 
+                    alt="Карта городов и поселений Боспора 375-400 гг. н.э." 
+                    loading="lazy" 
+                    width="2067" height="1882">
+                </picture>
+            </div>
+            <div class="late__text-2">
+                <h3 class="title--h3">
+                    Распространение христианства
+                </h3>
+                <p>
+                    Первые христиане, Боспорская епархия, раннехристианские грунтовые склепы.
+                </p>
+            </div>
+            <div class="late__picture-container-left picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/chrisma__640x779.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/chrisma__640x779.webp" 
+                        alt="Крест Константина хризма" 
+                        loading="lazy" 
+                        width="640" height="779">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                            КОНСТАНТИНОВ КРЕСТ
+                        </p>
+                        <p>
+                            «Константинов крест» (хризма, христограмма) — символ христианства, который получил широкое распространение после явления на небе равностороннего четырёхконечного креста императору Константину I Великому. Крест состоит из монограммы имени Христа, которая состоит из двух начальных греческих букв имени (греч. ΧΡΙΣΤΌΣ) — Χ (хи) и Ρ (ро), скрещённых между собой.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="late__text-3">
+                <h3 class="title--h3">
+                    Византия, тюрки
+                </h3>
+                <p>
+                    В составе Восточноримской империи. Тюрки.
+                </p>
+            </div>
+            <div class="late__picture-container-2 picture--container">
+                <div class="picture--container-inner">
+                    <picture>
+                        <source srcset="./Images/Kcherson_Yustin-2__800x398.avif" 
+                        type="image/avif">
+                        <img class="picture--img" 
+                        src="./Images/Kcherson_Yustin-2__800x398.webp" 
+                        alt="Монета Херсон император Юстин II" 
+                        loading="lazy" 
+                        width="800" height="398">
+                    </picture>
+                    <div class="picture--description">
+                        <p>
+                          МОНЕТА ИМПЕРАТОРА ЮСТИНА II<br>https://tauriscoins.ru/
+                        </p>
+                        <p>
+                            Медная монета номиналом 8 пентануммиев, выпущенная в Херсоне от имени императора Юстина II. На лицевой стороне надпись XERCONOC, стоящие фигуры императора и его супруги. На оборотной стороне стоящая фигура с хризмой, справа знак - Н.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
