style: new color footer icons and links

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                     <p>
                     Боспорское государство было основано древними греками на берегах современного Керченского пролива, который в древности носил название Боспор Киммерийский. Достаточно быстро оно увеличилось в размерах и превратилось в царство, которое контролировало территорию Восточного Крыма, Таманский полуостров, Нижнее Прикубанье, Восточное Приазовье и на некоторое время практически весь Крым и устье Дона.
                     </p>
-                    <p>
+                    <!-- <p>
                     История Боспорского царства насчитывает несколько сотен лет, начиная от времени появления первых греческих поселений в Северном Причерноморье и вплоть до эпохи Великого переселения народов и раннего Средневековья.
-                    </p>
+                    </p> -->
                 </div>
                 <h2 class="intro__title title--h2">Периодизация истории Боспора</h2>
                 <nav class="intro__nav">
@@ -2126,7 +2126,7 @@
                         <span class="footer--text">© Денис Гришенок 2025</span>                        
                     </li>
                     <li class="logo-list-item">
-                        <a href="mailto:grishenok@yandex.ru" class="footer--text">grishenok@yandex.ru</a>
+                        <a href="mailto:grishenok@yandex.ru" class="footer--text footer__link">grishenok@yandex.ru</a>
                     </li>
                 </ul>
             </div>
@@ -2165,7 +2165,7 @@
                         <a href="https://hisma.ru/" class="footer__link">ИСТОРИЯ и КАРТА</a>
                     </li>
                     <li class="footer__agreement">
-                        <a href="" class="footer--text small--text">Соглашение о конфиденциальности</a>
+                        <a href="" class="footer--text small--text footer__link">Соглашение о конфиденциальности</a>
                     </li>
                 </ul>
             </div>
