add new background image at section 'intro'

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <main class="content">
         <section class="intro">
             <div class="intro-container">
-                <h1 class="title--h1 intro__text">Боспорское царство</h1>
+                <h1 class="title--h1">Боспорское царство</h1>
                 <div class="intro__text">
                     <p>
                     Боспорское государство было основано древними греками на берегах современного Керченского пролива, который в древности носил название Боспор Киммерийский. Достаточно быстро оно увеличилось в размерах и превратилось в царство, которое контролировало территорию Восточного Крыма, Таманский полуостров, Нижнее Прикубанье, Восточное Приазовье и на некоторое время практически весь Крым и устье Дона.
