fix sections id-links

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
                 </nav>
             </div>
         </section>
-        <section class="kimmeric section--container">
-            <h2 class="kimmeric__title title--h2" id="section-kimmeric">Боспор Киммерийский</h2>
+        <section class="kimmeric section--container" id="section-kimmeric">
+            <h2 class="kimmeric__title title--h2">Боспор Киммерийский</h2>
             <div class="wrapper">
                 <div class="kimmeric__text text-area">
                     <p>
@@ -614,8 +614,8 @@
                 </picture>
             </div>
         </section>
-        <section class="spartok section--container">
-            <h2 class="spartok__title title--h2" id="section-spartok">
+        <section class="spartok section--container" id="section-spartok">
+            <h2 class="spartok__title title--h2">
                 Династия Спартокидов
             </h2>
             <div class="wrapper">
@@ -1399,8 +1399,8 @@
                 </picture>
             </div> 
         </section>
-        <section class="mitridat section--container">
-            <h2 class="mitridat__title title--h2" id="section-mitridat">
+        <section class="mitridat section--container" id="section-mitridat">
+            <h2 class="mitridat__title title--h2">
                 Династия Митридата Евпатора
             </h2>
             <div class="wrapper">
@@ -1696,8 +1696,8 @@
                 </picture>
             </div>
         </section>
-        <section class="tibery section--container">
-            <h2 class="tibery__title title--h2" id="section-tibery">
+        <section class="tibery section--container" id="section-tibery">
+            <h2 class="tibery__title title--h2">
                 Династия Тибериев Юлиев
             </h2>
             <div class="wrapper">
@@ -2105,8 +2105,8 @@
                 </div>
             </div>
         </section>
-        <section class="late section--container">
-            <h2 class="late__title title--h2" id="section-late">
+        <section class="late section--container" id="section-late">
+            <h2 class="late__title title--h2">
                 Поздний Боспор
             </h2>
             <div class="wrapper">
