feat (UI/UX) add highlightActiveLink at desktop dropdown menu

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Боспорское царство</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./scripts/main.js" defer></script>
+    <script src="./scripts/main.js" type="module" defer></script>
 </head>
 <body>
     <header class="header">
