--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </ul>
             </nav>       
         </div>
-        <div class="header__dropdown" id="header-dropdown"></div>
+        <div class="header__dropdown"></div>
         <div class="header__overlay"></div>    
     </header>
     
@@ -80,13 +80,11 @@
                         Материалы по истории Боспора разделены на несколько больших частей:
                     </p>
                 </div>
-                <nav class="intro__nav">
-                    <div id="menu-main"></div>
-                </nav>
-                    <!-- <ul class="intro__nav-list">
-                        <li class="intro__nav-item">
-                            <a href="#section-kimmeric" class="intro__nav-overlay-link"></a>
-                            <div class="intro__nav-link-container">
+                <nav class="intro__nav">                
+                    <ul class="intro__list">
+                        <li class="intro__item">
+                            <a href="#section-kimmeric" class="intro__link"></a>
+                            <div class="intro__item-container">
                                 <svg class="intro__nav-icon-svg" width="57" height="57" viewBox="0 0 57 57" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M28.5 0.5C43.964 0.5 56.5 13.036 56.5 28.5C56.5 43.964 43.964 56.5 28.5 56.5C13.036 56.5 0.5 43.964 0.5 28.5C0.5 13.036 13.036 0.5 28.5 0.5Z" stroke="#798A8D" stroke-miterlimit="10"/>
                                         <path d="M28.5332 8.64697L28.2565 47.9382" stroke="#798A8D" stroke-miterlimit="10"/>
@@ -101,7 +99,7 @@
                                     600 - 437 гг. до н.э.
                                 </p>
                             </div>
-                            <div class="intro__nav-description">
+                            <div class="intro__item-description">
                                 <p>
                                     появление греческих городов Боспора, Пантикапей и Археанактиды
                                 </p>
@@ -318,8 +316,8 @@
                                 </p>
                             </div>
                         </li>
-                    </ul> -->
-                
+                    </ul>
+                </nav>
             </div>
         </section>
         <section class="kimmeric section--container" id="section-kimmeric">
