style (dropdown menu): add highlight effect for active links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
     <div class="header__overlay"></div>
     <main class="content">
-        <section class="intro">
+        <section class="intro" id="section-intro">
             <div class="intro__container content">
                 <h1 class="title--h1">Боспорское царство</h1>
                 <div class="intro__text">
