style (header): new styles header

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 <body>
     <header class="header">  
         <div class="header__container">     
-            <div class="header__logo">
-                <a 
-                    class="header__link"    
-                    href="#section-intro"
-                    aria-label="Home"
-                    title="Наверх страницы"
-                >
+            <a class="header__link"    
+                href="#section-intro"
+                aria-label="Home"
+                title="Наверх страницы">
                 <img src="/src/assets/logo/LOGO-desktop.svg" alt="bosporoy logo" class="logo">    
-                </a>
-            </div>
+            </a>
             <nav class="header__menu">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
@@ -60,7 +56,7 @@
                                 Открыть список разделов
                             </span>
                         </button>
-                        <div class="header__dropdown"></div>
+                        <div class="header__dropdown" id="header-dropdown"></div>
                     </li>
                 </ul>
             </nav>       
